--- a/css/bootstrap.css/css/bootstrap.css
+++ b/css/bootstrap.css/css/bootstrap.css
@@ -59,8 +59,8 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  text-align: center;
-  background-color: lightgrey;
+  text-align: left;
+  background-color: #fff;
 }
 
 [tabindex="-1"]:focus:not(:focus-visible) {
@@ -586,8 +586,9 @@ pre code {
 }
 
 .no-gutters {
-  margin-right: 0;cc
+  margin-right: 0;
   margin-left: 0;
+}
 
 .no-gutters > .col,
 .no-gutters > [class*="col-"] {
@@ -5248,8 +5249,7 @@ a.badge-dark:focus, a.badge-dark.focus {
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
-  background-image: url(images/background.png) fixed center;
-  background-size: cover;
+  background-color: #e9ecef;
   border-radius: 0.3rem;
 }
 
