--- a/css/styles.css
+++ b/css/styles.css
@@ -15,7 +15,7 @@
            
 }
 body {
-       background-image: url("/images/logo2.jpeg");
+       background-image: url("/images/logo2.jpg");
        height: 100%;
        background-position-y: top;
        margin-top: 50px;
