add changes in the initial webpage

--- a/css/styles.css
+++ b/css/styles.css
@@ -23,7 +23,7 @@ body {
        font-family: sans-serif;
      }
  h1 {
-      color: black;
+      color: maroon;
       font-style: italic;
       font-family: serif;
     }
