add the final changes

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,3 +34,7 @@ body {
                  border: none;  
                  font-style: italic;                 
                 }
+.lead {
+        font-family: Georgia, 'Times New Roman', Times, serif;
+
+}                
