add final changes:

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ body {
          
        }
 .alert-success {
-                 background-color: white;
+                 background-color: lightgray;
                  color: blue;
                  border: none;  
                  font-style: italic;                 
